tests/invalid/invalid-031.inox
Module InvalidVarColon

Main() :
    Var :
        X := 10
    ;
;
